<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <Button
        android:id="@+id/viewAttendeesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_list_of_attendees"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@color/app_buttons"/>

    <Button
        android:id="@+id/shareQRButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_qr_code"
        android:layout_below="@id/viewAttendeesButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/app_buttons"/>

    <Button
        android:id="@+id/mapButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map"
        android:layout_below="@id/shareQRButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/app_buttons"/>

    <Button
        android:id="@+id/sendNotificationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_notification"
        android:layout_below="@id/mapButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/app_buttons"/>

    <Button
        android:id="@+id/sharePromotionalQRButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share_promotional_qr_code"
        android:layout_below="@id/sendNotificationButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/app_buttons"/>

    <Button
        android:id="@+id/geoLocationTrackingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/geo_location_tracking"
        android:layout_below="@id/sharePromotionalQRButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/app_buttons"/>

</RelativeLayout>
