<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <Button
        android:id="@+id/reuseQRButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reuse_qr_code"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@color/app_buttons"/>

    <Button
        android:id="@+id/generateQRButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_qr_code"
        android:layout_below="@id/reuseQRButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/app_buttons"/>


    <CheckBox
        android:id="@+id/promotionalQRCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/generate_promotional_qr_code"
        android:layout_below="@id/generateQRButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

</RelativeLayout>
