<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:background="#EFEFEF">

    <ScrollView
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:scrollbars="none"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/headerSendNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_notification_list"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold" />


    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="10dp"
        android:id="@+id/defaultNotificationsList"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        tools:listitem="@layout/notification_row"
        app:layout_constraintTop_toBottomOf="@+id/headerSendNotifications" />

    <LinearLayout
        android:id="@+id/customNotificationSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/defaultNotificationsList"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/defaultNotificationsList"
        android:background="@android:color/white"
        android:padding="16dp">

        <CheckBox
            android:id="@+id/customNotificationCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_notification"
            android:checked="true" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/NotificationTitle"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:background="@drawable/edittext_selector"
            android:hint="@string/notification_title"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/NotificationText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:background="@drawable/edittext_selector"
            android:hint="Enter Notification"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/topicName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:padding="5dp"
            android:gravity="center_vertical"
            android:background="@drawable/edittext_selector"
            android:hint="Enter Topic"
            android:layout_marginTop="10dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/customNotificationSection"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center">

            <Button
                android:id="@+id/sendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Send" />

            <Button
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Back"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
    </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <!-- Send and Back Buttons -->


</androidx.constraintlayout.widget.ConstraintLayout>